// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Binded Forms Binded Form 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <form
          autoComplete="off"
          className="srf-form srf-form"
          value={
            Object {
              "Name": "Dylan",
              "Surname": "Vorster",
            }
          }
        >
          <div
            className="srf-group srf-group"
            name=""
            value={
              Object {
                "Name": "Dylan",
                "Surname": "Vorster",
              }
            }
          >
            <table
              className="srf-table srf-table"
            >
              <tbody>
                <tr
                  className="srf-table__row"
                >
                  <td>
                    <label
                      className="srf-table__label"
                    >
                      Name
                    </label>
                  </td>
                  <td>
                    <input
                      className="srf-field srf-field"
                      name="Name"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Name"
                      value="Dylan"
                    />
                  </td>
                </tr>
                <tr
                  className="srf-table__row"
                >
                  <td>
                    <label
                      className="srf-table__label"
                    >
                      Surname
                    </label>
                  </td>
                  <td>
                    <input
                      className="srf-field srf-field"
                      name="Surname"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Surname"
                      value="Vorster"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="srf-form__buttons"
          >
            <input
              className="srf-button srf-button"
              name="Submit"
              onClick={[Function]}
              type="button"
              value="Submit"
            />
            <input
              className="srf-button srf-button"
              name="Reset"
              onClick={[Function]}
              type="button"
              value="Reset"
            />
          </div>
        </form>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Binded Forms Binded Form 2 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <form
          autoComplete="off"
          className="srf-form srf-form"
        >
          <div
            className="srf-group srf-group"
            name=""
            value={null}
          >
            <div
              className="srf-group srf-group"
              name=""
              value={
                Object {
                  "Name": "Dylan",
                  "Surname": "Vorster",
                }
              }
            >
              <table
                className="srf-table srf-table"
              >
                <tbody>
                  <tr
                    className="srf-table__row"
                  >
                    <td>
                      <label
                        className="srf-table__label"
                      >
                        Name
                      </label>
                    </td>
                    <td>
                      <input
                        className="srf-field srf-field"
                        name="Name"
                        onChange={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Name"
                        value="Dylan"
                      />
                    </td>
                  </tr>
                  <tr
                    className="srf-table__row"
                  >
                    <td>
                      <label
                        className="srf-table__label"
                      >
                        Surname
                      </label>
                    </td>
                    <td>
                      <input
                        className="srf-field srf-field"
                        name="Surname"
                        onChange={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Surname"
                        value="Vorster"
                      />
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            className="srf-form__buttons"
          >
            <input
              className="srf-button srf-button"
              name="Submit"
              onClick={[Function]}
              type="button"
              value="Submit"
            />
            <input
              className="srf-button srf-button"
              name="Reset"
              onClick={[Function]}
              type="button"
              value="Reset"
            />
          </div>
        </form>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms Custom Buttons 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <div>
          <form
            autoComplete="off"
            className="srf-form srf-form"
          >
            <div
              className="srf-group srf-group"
              name=""
              value={null}
            >
              <table
                className="srf-table srf-table"
              >
                <tbody>
                  <tr
                    className="srf-table__row"
                  >
                    <td>
                      <label
                        className="srf-table__label"
                      >
                        Name
                      </label>
                    </td>
                    <td>
                      <input
                        className="srf-field srf-field"
                        name="Name"
                        onChange={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Name"
                        value=""
                      />
                    </td>
                  </tr>
                  <tr
                    className="srf-table__row"
                  >
                    <td>
                      <label
                        className="srf-table__label"
                      >
                        Surname
                      </label>
                    </td>
                    <td>
                      <input
                        className="srf-field srf-field"
                        name="Surname"
                        onChange={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Surname"
                        value=""
                      />
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              className="srf-form__buttons"
            />
          </form>
          <p>
            My buttons are decoupled:
          </p>
          <br />
          <br />
          <div
            onClick={[Function]}
            style={
              Object {
                "background": "gray",
                "padding": 10,
              }
            }
          >
            Click me to save!
          </div>
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms Customize Buttons 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <form
          autoComplete="off"
          className="srf-form srf-form"
        >
          <div
            className="srf-group srf-group"
            name=""
            value={null}
          >
            <table
              className="srf-table srf-table"
            >
              <tbody>
                <tr
                  className="srf-table__row"
                >
                  <td>
                    <label
                      className="srf-table__label"
                    >
                      Name
                    </label>
                  </td>
                  <td>
                    <input
                      className="srf-field srf-field"
                      name="Name"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Name"
                      value=""
                    />
                  </td>
                </tr>
                <tr
                  className="srf-table__row"
                >
                  <td>
                    <label
                      className="srf-table__label"
                    >
                      Surname
                    </label>
                  </td>
                  <td>
                    <input
                      className="srf-field srf-field"
                      name="Surname"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Surname"
                      value=""
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="srf-form__buttons"
          >
            <input
              className="srf-button srf-button"
              name="Save Form"
              onClick={[Function]}
              type="button"
              value="Save Form"
            />
            <input
              className="srf-button srf-button"
              name="custom reset button"
              onClick={[Function]}
              type="button"
              value="custom reset button"
            />
          </div>
        </form>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms Simple Form 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <form
          autoComplete="off"
          className="srf-form srf-form"
        >
          <div
            className="srf-group srf-group"
            name=""
            value={null}
          >
            <table
              className="srf-table srf-table"
            >
              <tbody>
                <tr
                  className="srf-table__row"
                >
                  <td>
                    <label
                      className="srf-table__label"
                    >
                      Name
                    </label>
                  </td>
                  <td>
                    <input
                      className="srf-field srf-field"
                      name="Name"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Name"
                      value=""
                    />
                  </td>
                </tr>
                <tr
                  className="srf-table__row"
                >
                  <td>
                    <label
                      className="srf-table__label"
                    >
                      Surname
                    </label>
                  </td>
                  <td>
                    <input
                      className="srf-field srf-field"
                      name="Surname"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Surname"
                      value=""
                    />
                  </td>
                </tr>
                <tr
                  className="srf-table__row"
                >
                  <td>
                    <label
                      className="srf-table__label"
                    >
                      Lots o text
                    </label>
                  </td>
                  <td>
                    <textarea
                      className="srf-field srf-field"
                      name="Lots o text"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Lots o text"
                      textArea={true}
                      value=""
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="srf-form__buttons"
          >
            <input
              className="srf-button srf-button"
              name="Submit"
              onClick={[Function]}
              type="button"
              value="Submit"
            />
            <input
              className="srf-button srf-button"
              name="Reset"
              onClick={[Function]}
              type="button"
              value="Reset"
            />
          </div>
        </form>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Forms Simple Form with nested groups 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "background": "rgb(255, 255, 255)",
      "bottom": 0,
      "display": "flex",
      "flexDirection": "column",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    data-radium={true}
    style={
      Object {
        "boxSizing": "border-box",
        "flex": 1,
        "margin": 50,
        "position": "relative",
      }
    }
  >
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "border": "solid 1px rgba(0, 0, 0, 0.0)",
            "boxSizing": "border-box",
            "height": "auto",
            "position": "relative",
            "width": "auto",
          }
        }
      >
        <form
          autoComplete="off"
          className="srf-form srf-form"
        >
          <div
            className="srf-group srf-group"
            name=""
            value={null}
          >
            <table
              className="srf-table srf-table"
            >
              <tbody>
                <tr
                  className="srf-table__row"
                >
                  <td>
                    <label
                      className="srf-table__label"
                    >
                      Name
                    </label>
                  </td>
                  <td>
                    <input
                      className="srf-field srf-field"
                      name="Name"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Name"
                      value=""
                    />
                  </td>
                </tr>
                <tr
                  className="srf-table__row"
                >
                  <td>
                    <label
                      className="srf-table__label"
                    >
                      Surname
                    </label>
                  </td>
                  <td>
                    <input
                      className="srf-field srf-field"
                      name="Surname"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Surname"
                      value=""
                    />
                  </td>
                </tr>
                <tr
                  className="srf-table__row"
                >
                  <td
                    colSpan={2}
                  >
                    <div
                      className="srf-group srf-group"
                      name="group1"
                      value={null}
                    >
                      <input
                        className="srf-field srf-field"
                        name="Nested Name"
                        onChange={[Function]}
                        onKeyPress={[Function]}
                        placeholder="Nested Name"
                        value=""
                      />
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div
            className="srf-form__buttons"
          >
            <input
              className="srf-button srf-button"
              name="Submit"
              onClick={[Function]}
              type="button"
              value="Submit"
            />
            <input
              className="srf-button srf-button"
              name="Reset"
              onClick={[Function]}
              type="button"
              value="Reset"
            />
          </div>
        </form>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": undefined,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": "auto",
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": -19,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": "auto",
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 5,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 0,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": -19,
              "position": "absolute",
              "right": "auto",
              "top": "auto",
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 0,
                "position": "absolute",
                "right": 5,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": "auto",
                "position": "absolute",
                "right": 0,
                "top": 5,
              }
            }
          />
        </div>
        <div
          data-radium={true}
          style={
            Object {
              "bottom": -19,
              "height": 20,
              "left": "auto",
              "position": "absolute",
              "right": -19,
              "top": undefined,
              "width": 20,
            }
          }
        >
          <div
            data-radium={true}
            style={
              Object {
                "borderBottom": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": "auto",
                "left": 5,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <div
            data-radium={true}
            style={
              Object {
                "borderRight": "solid 1px rgba(0, 0, 0, 0.1)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": "auto",
                "top": 5,
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
